[package]
name = "compsvg"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.robmikh-common]
git = "https://github.com/robmikh/robmikh-common-rs"
rev = "b5eb775457e1168be46831d7d67130419bb821e7"
features = [
    "d3d",
    "d2d",
]

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "Foundation",
    "Foundation_Collections",
    "Foundation_Metadata",
    "Foundation_Numerics",
    "UI",
    "UI_Composition",
    "Graphics",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_WinRT",
]

[dev-dependencies.robmikh-common]
git = "https://github.com/robmikh/robmikh-common-rs"
rev = "b5eb775457e1168be46831d7d67130419bb821e7"
features = [
    "dispatcher-queue-desktop",
    "stream",
]

[dev-dependencies.windows]
version = "0.37.0"
features = [
    "Graphics",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Capture",
    "Graphics_Imaging",
    "UI_Composition_Core",
    "Storage",
    "Storage_Streams",
]
