[package]
name = "compsvg"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.robmikh-common]
git = "https://github.com/robmikh/robmikh-common-rs"
rev = "7621b3c717725c4d5e3026b6759085514f97e842"
features = [
    "d3d",
    "d2d",
]

[dependencies.windows]
version = "0.38.0"
features = [
    "alloc",
    "Foundation",
    "Foundation_Collections",
    "Foundation_Metadata",
    "Foundation_Numerics",
    "UI",
    "UI_Composition",
    "Graphics",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_WinRT",
]

[dev-dependencies.robmikh-common]
git = "https://github.com/robmikh/robmikh-common-rs"
rev = "7621b3c717725c4d5e3026b6759085514f97e842"
features = [
    "dispatcher-queue-desktop",
    "stream",
]

[dev-dependencies.windows]
version = "0.38.0"
features = [
    "Graphics",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Capture",
    "Graphics_Imaging",
    "UI_Composition_Core",
    "Storage",
    "Storage_Streams",
]
